argocd/applications/kfdefs/ingress.yaml
"apiVersion": "networking.k8s.io/v1beta1"
"kind": "Ingress"
"metadata":
  "annotations":
    "alb.ingress.kubernetes.io/auth-idp-cognito": "{\"UserPoolArn\":\"arn:aws:cognito-idp:eu-central-1:863518836478:userpool/eu-central-1_A8GfrNsby\",\"UserPoolClientId\":\"49cd1bb5s5f3tgc3erm97emkgg\",\"UserPoolDomain\":\"auth.dev-18.learn-mlops.com\"}"
    "alb.ingress.kubernetes.io/auth-type": "cognito"
    "alb.ingress.kubernetes.io/certificate-arn": "arn:aws:acm:eu-central-1:863518836478:certificate/5f7da7e4-d584-4f14-baea-02de1dc72619"
    "alb.ingress.kubernetes.io/listen-ports": "[{\"HTTPS\":443}]"
    "alb.ingress.kubernetes.io/scheme": "internet-facing"
    "kubernetes.io/ingress.class": "alb"
  "labels":
    "app": "kubeflow"
  "name": "istio-ingress"
  "namespace": "istio-system"
"spec":
  "rules":
  - "host": "kubeflow.dev-18.learn-mlops.com"
    "http":
      "paths":
      - "backend":
          "serviceName": "istio-ingressgateway"
          "servicePort": 80
        "path": "/*"
  "tls":
  - "hosts":
    - "kubeflow.dev-18.learn-mlops.com"
    "secretName": "kubeflow-tls-certs"
